Add source for jdk-6u23